# xo-net

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: example.cpp
